--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head><title>RESUME</title>
 <style>
 h1          {
-	color : red;
+	color : black;
 	text_align:center;
 	font_size:50px
                 }
@@ -17,8 +17,10 @@ h1          {
 	Phone    	     : 8281536171 <br>
 	Address 	     : Raj Bahvan,PO Chirakkal Kannur-11<br>
 	Email     	     :prarthnasunil7@gmail.com<br>
-	Qualification  :BCA<br>SAP(abap)<br>
+	Qualification        :BCA , SAP(abap)<br>
+	Strength	     :good listener,leadership quality , adjust to every situation
 	</p>
+	
 	
 	</body>
 </html>
