--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ h1          {
 	Qualification        :BCA , SAP(abap)<br>
 	Strength	     :good listener,leadership quality , adjust to every situation
 	</p>
-	
+		<a href="snake.html">snake</a>
 	
 	</body>
 </html>
