--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ h1          {
 		
 	
 	</body>
-	<a href="snake.html">snake</a>
+	<a href="snake.html">snake</a><br>
 	<a href="calci.html">calculator</a>
 </html>
 	
